--- a/css.css
+++ b/css.css
@@ -1,112 +1,408 @@
+/* ne menja dimenzije elemenata kad se dodaje border, padding i ostale */
+html {
+  box-sizing: border-box;
+  min-width: 300px;
+}
+/* uklanja default padding i margine */
 body {
-  background-color: #595959;
+  height: 100%;
+  font-family: 'Open Sans', sans-serif;
+  padding: 0;
+  margin: 0;
+  background-color: var(--color2);
+}
+
+:root {
+  --color1: #ffffff;
+  --color2: #f4f4f4;
+  --color3: #d9d9d9;
+  --color4: #515151;
+  --color5: #000000;
+  --color6: #d2315f;
+  --borderRadius: 5px;
 }
 
 /* ////////////// main container ///////////////// */
 #container {
-  display: block;
-  width: 400px;
-  margin: 0px auto;
+  -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+  -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+  box-sizing: border-box;         /* Opera/IE 8+ */
+  display: grid;
+  grid-template-columns: auto;
+  grid-auto-rows: 70px 25px 50px auto;
+  grid-template-areas:
+  "input"
+  "hr"
+  "info"
+  "notes";
+
+  /* border: 1px solid purple; */
+  width: 100%;
+  height: 100%;
+  padding: 7px;
+}
+
+/* ////////////// category input ///////////////// */
+#category {
+  grid-area: input;
+  /* border: 1px solid black; */
+}
+
+#category__form {
+  height: 100%;
+  width: 100%;
+}
+
+#category__textarea {
+  width: 80%;
+  height: 100%;
+  display: inline-block;
+  border: none;
+  background-color: var(--color1);
+  resize: none;
+  border-radius: var(--borderRadius);
+  font-size: 1.5em;
+  color: var(--color4);
+  font-weight: 600;
+
+  -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+  -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+  box-sizing: border-box;         /* Opera/IE 8+ */
+}
+
+#category__textarea[type=text] {
+  padding-left: 2%;
+  padding-top: 20px;
+}
+
+#category__submitbutton {
+  display: inline-block;
+  width: 18%;
+  height: 100%;
+  border: none;
+  background-color: var(--color1);
+  border-radius: var(--borderRadius);
+  font-size: 2.2em;
+  vertical-align: top;
+  margin-top: 1px;
+  font-weight: 300;
+  color: var(--color3);
+  -webkit-box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.14);
+  -moz-box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.14);
+  box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.14);
+}
+
+/* ////////////// note input ///////////////// */
+#note {
+  grid-area: input;
+  display: none;
+  /* border: 1px solid black; */
+}
+
+#note__form {
+  height: 100%;
+  width: 100%;
+}
+
+#note__textarea {
+  width: 80%;
+  height: 100%;
+  display: inline-block;
+  border: none;
+  background-color: var(--color1);
+  resize: none;
+  border-radius: var(--borderRadius);
+  font-size: 1.5em;
+  color: var(--color4);
+  font-weight: 600;
+
+  -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+  -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+  box-sizing: border-box;         /* Opera/IE 8+ */
+}
+
+#note__textarea[type=text] {
+  padding-left: 2%;
+  padding-top: 20px;
+}
+
+#note__submitbutton {
+  display: inline-block;
+  width: 18%;
+  height: 100%;
+  border: none;
+  background-color: var(--color1);
+  border-radius: var(--borderRadius);
+  font-size: 2.2em;
+  vertical-align: top;
+  margin-top: 1px;
+  font-weight: 300;
+  color: var(--color3);
+  -webkit-box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.14);
+  -moz-box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.14);
+  box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.14);
+}
+
+/* ////////////// hr line ///////////////// */
+
+#hrDivContainer {
+  grid-area: hr;
+  display: flex;
+}
+
+#hrDivContainer__hr {
+  margin: auto;
+  width: 100%;
+  height: 3px;
+  background-color: var(--color3);
 }
 
 /* ////////////// menu ///////////////// */
 #menu {
-  width: 400px;
-  margin-top: 20px;
-  border: 1px solid black;
+  grid-area: info;
+  /* border: 1px solid black; */
 }
 
 /* ////////////// info ///////////////// */
+#info {
+  background-color: var(--color1);
+  width: 50%;
+  height: 100%;
+  border-radius: var(--borderRadius);
+  display: inline-block;
+  /* vertical-align: top; */
+}
+
 #info__text {
-  color: white;
+  /* display: inline-block; */
+  /* vertical-align: top; */
+  margin: 0;
+  padding: 0;
+  padding-top: 5px;
+  padding-left: 5px;
+  color: var(--color4);
 }
 
-/* ////////////// category ///////////////// */
-#category {
-  width: 400px;
-  margin-top: 20px;
-  border: 1px solid black;
+#menu__themeButton {
+  display: inline-block;
+  vertical-align: top;
+  width: 18%;
+  height: 100%;
+  border: none;
+  background-color: var(--color1);
+  border-radius: var(--borderRadius);
 }
 
-#category__display {
-  width: 400px;
+#menu__returnButton {
+  display: inline-block;
+  vertical-align: top;
+  width: 29%;
+  height: 100%;
+  border: none;
+  background-color: var(--color1);
+  border-radius: var(--borderRadius);
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1.7em;
+}
+
+#backButtonSvg {
+  width: 80px;
+  /* height: 50%; */
+  /* padding-right: 10px; */
+}
+
+#themeButtonSvg {
+  width: 50px;
+  fill-color: blue;
+  /* height: 90%; */
+  /* padding-right: 10px; */
+}
+
+/* ////////////// category list ///////////////// */
+
+#categoryList {
+  grid-area: notes;
   height: auto;
-  margin-top: 20px;
-  border: 1px solid black;
+  margin-top: 10px;
+  /* border: 1px solid blue; */
+  overflow: hidden;
+  background-color: var(--color1);
+  border-radius: var(--borderRadius);
+}
+
+#categoryList__title {
+  margin: 0;
+  padding: 0;
+  background-color: var(--color3);
+  color: var(--color1);
+  font-weight: 400;
+  text-align: center;
+  font-size: 1.1em;
 }
 
 .category__container {
-  border: 1px solid red;
+  position: relative;
   cursor: pointer;
+  padding: 7px;
+  border-bottom: 3px solid var(--color3);
 }
 
 .category__title {
   margin: 0;
-  color: #fff;
+  font-weight: 400;
+  font-size: 1.3em;
 }
 
 .category__date {
   margin: 0;
-  color: #fff;
+  font-weight: 500;
+  font-size: 0.9em;
+  color: var(--color4);
+}
+
+.category__date__span {
+  color: var(--color6);
 }
 
 .category__info {
   margin: 0;
-  color: #fff;
+  font-weight: 500;
+  font-size: 0.9em;
+  color: var(--color4);
 }
 
-/* ////////////// note ///////////////// */
-#note {
-
-  display: none;
-
-  width: 400px;
-  margin-top: 20px;
-  border: 1px solid black;
+.category__info__span {
+  color: var(--color6);
 }
 
-#note__display {
-  width: 400px;
+.category__checkbox {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  width: 20px;
+  height: 20px;
+}
+
+input[type=checkbox] {
+    transform: scale(1.5);
+}
+
+.category__delete {
+  position: absolute;
+  top: 30px;
+  right: 0px;
+
+  width: 40px;
+  height: 40px;
+  background: none;
+  border: none;
+}
+
+.deleteButtonSvg {
+  width: 100%;
+  height: 100%;
+}
+
+/* ////////////// note list ///////////////// */
+
+#noteList {
+  grid-area: notes;
   height: auto;
-  margin-top: 20px;
-  border: 1px solid black;
+  margin-top: 10px;
+  /* border: 1px solid blue; */
+  overflow: hidden;
+  background-color: var(--color1);
+  border-radius: var(--borderRadius);
+}
+
+#noteList__title {
+  margin: 0;
+  padding: 0;
+  background-color: var(--color6);
+  color: var(--color1);
+  font-weight: 400;
+  text-align: center;
+  font-size: 1.1em;
 }
 
 .note__container {
-  border: 1px solid blue;
+  position: relative;
+  cursor: pointer;
+  padding: 7px;
+  border-bottom: 3px solid var(--color6);
+  padding-bottom: 20px;
 }
 
-.note__title {
+              .note__titleDateContainer {
+                display: inline-block;
+                vertical-align:top;
+                margin: 0;
+                /* margin-top: -20px; */
+                margin-left: 25px;
+              }
+
+              .note__title {
+                /* display: inline-block;
+                vertical-align:top;
+                margin: 0;
+                margin-left: 25px; */
+                font-weight: 400;
+                font-size: 1.3em;
+                margin: 0;
+              }
+
+              .note__date {
+                /* position: relative;
+                display: inline-block; */
+                /* vertical-align:top; */
+                margin: 0;
+                font-weight: 500;
+                font-size: 0.9em;
+                color: var(--color4);
+              }
+
+.note__date__span {
+  color: var(--color6);
+}
+
+.note__info {
   margin: 0;
-  color: #fff;
+  font-weight: 500;
+  font-size: 0.9em;
+  color: var(--color4);
 }
 
-.note__date {
-  margin: 0;
-  color: #fff;
+.note__info__span {
+  color: var(--color6);
 }
 
+            .note__checkbox {
+              /* position: absolute; */
+              margin-top: 20px;
+              margin-left: 20px;
+              width: 20px;
+              height: 20px;
+            }
 
+            .note__checkbox[type=checkbox] {
 
+              transform: scale(3);
+            }
 
+.note__delete {
+  position: absolute;
+  top: 30px;
+  right: 0px;
 
+  width: 40px;
+  height: 40px;
+  background: none;
+  border: none;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.deleteButtonSvg {
+  width: 100%;
+  height: 100%;
+}
 
 /*  */
