--- a/css.css
+++ b/css.css
@@ -181,7 +181,7 @@ body {
   /* padding-top: 5px; */
   padding-left: 5px;
   color: var(--color4);
-  font-size: 0.9em;
+  font-size: 0.8em;
 }
 
 .infoTextColorSPan {
@@ -233,6 +233,12 @@ body {
   overflow: hidden;
   background-color: var(--color1);
   border-radius: var(--borderRadius);
+}
+
+.category__clickDiv {
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
 
 #categoryList__title {
@@ -366,6 +372,10 @@ input[type=checkbox] {
                 font-size: 0.9em;
                 color: var(--color4);
               }
+
+.note__date__span {
+  color: var(--color6);
+}
 
 .note__date__span {
   color: var(--color6);
