--- a/css.css
+++ b/css.css
@@ -112,8 +112,10 @@ body {
   background-color: var(--color1);
   resize: none;
   border-radius: var(--borderRadius);
+  border: 2px solid var(--color6);
+  /* box-shadow: inset 0px 0px 4px var(--color6); */
   font-size: 1.5em;
-  color: var(--color4);
+  color: var(--color6);
   font-weight: 600;
 
   -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
@@ -124,6 +126,11 @@ body {
 #note__textarea[type=text] {
   padding-left: 2%;
   padding-top: 20px;
+}
+
+#note__textarea::placeholder {
+  color: var(--color6);
+  opacity: 0.7; /* Firefox */
 }
 
 #note__submitbutton {
@@ -137,7 +144,7 @@ body {
   vertical-align: top;
   margin-top: 1px;
   font-weight: 300;
-  color: var(--color3);
+  color: var(--color6);
   -webkit-box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.14);
   -moz-box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.14);
   box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.14);
@@ -262,6 +269,7 @@ body {
   margin: 0;
   font-weight: 400;
   font-size: 1.3em;
+  color: var(--color5);
 }
 
 .category__date {
@@ -436,5 +444,38 @@ input[type=checkbox] {
   width: 100%;
   height: 100%;
 }
+
+/* note color change menu toggle */
+
+/* .note__color {
+
+} */
+
+/* .dropdown {
+  position: relative;
+  display: inline-block;
+} */
+
+.colorButtonContainer {
+  display: none;
+  /* border-top: 3px solid var(--color6); */
+  text-align: center;
+  /* position: absolute; */
+  /* background-color: salmon; */
+  /* overflow: auto; */
+  z-index: 1;
+}
+
+.colorButtonColors {
+  display: inline-block;
+  border-radius: var(--borderRadius);
+  margin: 1%;
+  margin-top: 20px;
+  margin-bottom: -20px;
+  width: 23%;
+  height: 30px;
+}
+
+
 
 /*  */
