--- a/css.css
+++ b/css.css
@@ -92,6 +92,10 @@ body {
   box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.14);
 }
 
+#category__submitbutton:active {
+  background-color: var(--color6);
+}
+
 /* ////////////// note input ///////////////// */
 #note {
   grid-area: input;
@@ -149,6 +153,11 @@ body {
   box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.14);
 }
 
+#note__submitbutton:active {
+  background-color: var(--color6);
+  color: #fff;
+}
+
 /* ////////////// hr line ///////////////// */
 
 #hrDivContainer {
@@ -160,7 +169,7 @@ body {
   margin: auto;
   width: 100%;
   height: 3px;
-  background-color: var(--color3);
+  background-color: var(--color4);
 }
 
 /* ////////////// menu ///////////////// */
@@ -180,6 +189,7 @@ body {
 
 #info__text {
   /* display: inline-block; */
+  width: 95%;
   vertical-align: top;
   margin: 0;
   padding: 0;
@@ -196,32 +206,63 @@ body {
 #menu__themeButton {
   display: inline-block;
   vertical-align: top;
-  width: 18%;
+  width: 15%;
   height: 100%;
   border: none;
   background-color: var(--color1);
   border-radius: var(--borderRadius);
+}
+
+#menu__themeButton:active {
+  background-color: var(--color6);
+  color: #fff;
 }
 
 #menu__returnButton {
   display: inline-block;
   vertical-align: top;
-  width: 29%;
+  opacity: 10%;
+  width: 15%;
   height: 100%;
   border: none;
   background-color: var(--color1);
   border-radius: var(--borderRadius);
   font-family: 'Open Sans', sans-serif;
-  font-size: 1.7em;
+  /* font-size: 1.7em; */
+}
+
+#menu__returnButton:active {
+  background-color: var(--color6);
+}
+
+#menu__checkedButton {
+  display: inline-block;
+  vertical-align: top;
+  width: 15%;
+  height: 100%;
+  border: none;
+  background-color: var(--color1);
+  border-radius: var(--borderRadius);
+  font-family: 'Open Sans', sans-serif;
+}
+
+#menu__checkedButton:active {
+  background-color: var(--color6);
 }
 
 #backButtonSvg {
-  width: 80px;
+  height: 100%;
+  width: 100%;
+}
+
+#checkedButtonSvg {
+  height: 100%;
+  width: 100%;
 }
 
 #themeButtonSvg {
-  width: 50px;
-  fill-color: blue;
+  height: 100%;
+  width: 100%;
 }
 
 /* ////////////// category list ///////////////// */
@@ -245,7 +286,7 @@ body {
 #categoryList__title {
   margin: 0;
   padding: 0;
-  background-color: var(--color3);
+  background-color: var(--color4);
   color: var(--color1);
   font-weight: 400;
   text-align: center;
@@ -257,6 +298,11 @@ body {
   cursor: pointer;
   padding: 7px;
   border-bottom: 3px solid var(--color3);
+}
+
+.category__container__placeholder {
+  text-align: center;
+  font-weight: 400;
 }
 
 .category__title {
@@ -352,6 +398,11 @@ input[type=checkbox] {
   vertical-align:top;
   margin: 0;
   margin-left: 25px;
+}
+
+.note__titleDateContainer:active {
+  color: var(--color5);
+  opacity: 10%;
 }
 
 .note__title {
