--- a/css.css
+++ b/css.css
@@ -5,11 +5,15 @@ html {
 }
 /* uklanja default padding i margine */
 body {
-  height: 100%;
+  height: 100vh;
   font-family: 'Open Sans', sans-serif;
   padding: 0;
   margin: 0;
+  background-image: url("graphics/background.svg");
+  background-repeat: no-repeat;
+  background-position: center bottom;
   background-color: var(--color2);
+  background-size: 100%;
 }
 
 :root {
@@ -20,6 +24,22 @@ body {
   --color5: #000000;
   --color6: #d2315f;
   --borderRadius: 5px;
+}
+
+/* ////////////// logo intro ///////////////// */
+
+#logoContainer {
+  position: fixed;
+  text-align: center;
+  z-index: 1;
+  height: 100%;
+  width: 100%;
+  background-image: radial-gradient(#a06ad3, #6823c1);
+}
+
+#logoContainer__svg {
+  margin-top: 30%;
+  width: 90%;
 }
 
 /* ////////////// main container ///////////////// */
@@ -38,7 +58,7 @@ body {
 
   /* border: 1px solid purple; */
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
   padding: 7px;
 }
 
@@ -265,6 +285,20 @@ body {
   width: 100%;
 }
 
+/* ////////////// placeholder ///////////////// */
+
+#placeholder {
+  width: 100%;
+  z-index: -10;
+  background-color: red;
+}
+
+#placeholder__text {
+  font-weight: 400;
+  text-align: center;
+  color: var(--color4);
+}
+
 /* ////////////// category list ///////////////// */
 
 #categoryList {
@@ -298,11 +332,8 @@ body {
   cursor: pointer;
   padding: 7px;
   border-bottom: 3px solid var(--color3);
-}
-
-.category__container__placeholder {
-  text-align: center;
-  font-weight: 400;
+  background-color: var(--color1);
+  z-index: 10;
 }
 
 .category__title {
